# microcpp_grad

./: .gitignore  CMakeLists.txt  Makefile  README.md  engine.cpp  engine.hpp  main.cpp
examples/: neural_net.cpp  neuron.cpp  ops_example.cpp  simple_neural_net.cpp  single_perceptron.cpp  training.cpp
include/micrograd/: engine.hpp  nn.hpp
micrograd/: engine.cpp  engine.hpp  nn.hpp
python/: demo.ipynb  graph.dot  pymicrograd.cpp  pymicrograd_test.py  test_demo.ipynb
python/.ipynb_checkpoints/: demo-checkpoint.ipynb  test_demo-checkpoint.ipynb
test/: Makefile  example.cpp  graph.txt  main  main.cpp  neural_netowork.cpp  ops_example.cpp  simple_training.cpp
